--- a/Base.lproj/FieldLines.xib
+++ b/Base.lproj/FieldLines.xib
@@ -10,8 +10,6 @@
             <connections>
                 <outlet property="IBCancel" destination="107" id="407"/>
                 <outlet property="IBChargeTxt" destination="397" id="400"/>
-                <outlet property="IBColors" destination="411" id="421"/>
-                <outlet property="IBColorsTxt" destination="416" id="420"/>
                 <outlet property="IBSave" destination="110" id="406"/>
                 <outlet property="IBdConstwidth" destination="385" id="389"/>
                 <outlet property="IBdElectric" destination="386" id="390"/>
@@ -35,7 +33,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <window title="Configure" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="21" userLabel="InfoPanel" customClass="NSPanel">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -58,7 +56,7 @@
                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" preferredMaxLayoutWidth="42" translatesAutoresizingMaskIntoConstraints="NO" id="18">
                         <rect key="frame" x="199" y="446" width="46" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="1.0.3" id="425">
+                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="(ver#)" id="425">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -283,32 +281,6 @@ DQ
                             <action selector="sheet_update:" target="-2" id="418"/>
                         </connections>
                     </slider>
-                    <popUpButton verticalHuggingPriority="750" fixedFrame="YES" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="411">
-                        <rect key="frame" x="300" y="136" width="146" height="26"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <popUpButtonCell key="cell" type="push" title="Item1" bezelStyle="rounded" alignment="left" lineBreakMode="clipping" enabled="NO" state="on" borderStyle="borderAndBezel" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" id="448">
-                            <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
-                            <menu key="menu" title="OtherViews" id="413">
-                                <items>
-                                    <menuItem title="Item1" state="on" id="415"/>
-                                    <menuItem title="Item2" id="412"/>
-                                </items>
-                            </menu>
-                        </popUpButtonCell>
-                        <connections>
-                            <action selector="sheet_update:" target="-2" id="422"/>
-                        </connections>
-                    </popUpButton>
-                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" preferredMaxLayoutWidth="110" translatesAutoresizingMaskIntoConstraints="NO" id="416">
-                        <rect key="frame" x="288" y="168" width="114" height="17"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <textFieldCell key="cell" enabled="NO" sendsActionOnEndEditing="YES" alignment="left" title="Colors" id="449">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                 </subviews>
             </view>
             <point key="canvasLocation" x="139" y="147"/>
